--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,5 +1,159 @@
 {
   "welcome": "Welcome to our application!",
-  "description": "This is a description in English.",
-  "dashboard": "Dashboard"
+  "description": "Description",
+  "dashboard": "Dashboard",
+  "officesDepartments": "Offices & Departments",
+  "offices": "Offices",
+  "departments": "Departments",
+  "visitors": "Visitors",
+  "personaNonGrata": "Persona Non Grata",
+  "all": "All",
+  "add": "Add",
+  "usersPermissions": "Users & Permissions",
+  "users": "Users",
+  "permissions": "Permissions",
+  "visitorDeleteConfirm": "Are you sure you want to delete this Visitor?",
+  "errorDeletingVisitor": "Error deleting visitor",
+  "photo": "Photo",
+  "name": "Name",
+  "phone": "Phone",
+  "fin": "Fin",
+  "actions": "Actions",
+  "view": "View",
+  "loading": "Loading...",
+
+  "visitorAll": {
+    "title": "All Visitors",
+    "loading": "Loading...",
+    "actions": "Actions",
+    "view": "View",
+    "deleteConfirm": "Are you sure you want to delete this Visitor?",
+    "errorDeleting": "Error deleting visitor"
+  },
+
+  "visitor": {
+    "add": {
+      "success": "Visitor successfully updated",
+      "submitting": "Submitting...",
+      "submit": "Submit",
+      "error": "Error occurred while adding visitor"
+    },
+    "edit": {
+      "title": "Edit Visitor",
+      "success": "Visitor successfully updated"
+    }
+  },
+
+  "visitorAdd": {
+    "title": "Add Visitor",
+    "success": "Visitor successfully added",
+    "submitting": "Submitting...",
+    "submit": "Submit",
+    "reset": "Reset",
+    "name": "Name",
+    "enterName": "Enter Name",
+    "phone": "Phone",
+    "enterPhone": "Enter Phone",
+    "fin": "FIN",
+    "enterFin": "Enter FIN",
+    "email": "Email",
+    "enterEmail": "Enter Email",
+    "address": "Address",
+    "enterAddress": "Enter Address",
+    "description": "Description",
+    "enterDescription": "Enter Description",
+    "addItem": "Add Item",
+    "itemName": "Item Name",
+    "itemDescription": "Item Description",
+    "addPhoto": "Add Photo"
+  },
+
+  "visitorReport": {
+    "title": "Visitor Report",
+    "generateReport": "Generate Report",
+    "downloadReport": "Download Report",
+    "dateRange": "Date Range",
+    "from": "From",
+    "to": "To",
+    "noData": "No data available for this period"
+  },
+
+  "visitorView": {
+    "noPhoto": "No photo available",
+    "viewVisitor": "View Visitor",
+    "name": "Name",
+    "phone": "Phone",
+    "fin": "FIN",
+    "email": "Email",
+    "address": "Address",
+    "description": "Description"
+  },
+
+  "office": {
+    "add": {
+      "add":"Add new Office",
+      "success": "Office successfully added",
+      "officeExists": "Office already exists",
+      "officeName": "Office Name",
+      "address": "Address",
+      "phone": "Phone",
+      "submitting": "Submitting...",
+      "submit": "Submit"
+    },
+    "all":{
+      "title": "All Offices",
+      "searchPlaceholder": "Search offices...",
+      "deleteConfirm": "Are you sure you want to delete this office?",
+      "noOffices": "No offices available",
+      "officeName": "Office Name",
+      "address": "Address",
+      "phoneNumber": "Phone Number",
+      "departments": "Departments",
+      "actions": "Actions",
+      "edit": "Edit",
+      "delete": "Delete"
+    },
+    "edit":{
+      "title": "Edit Office",
+      "success": "Office successfully edited",
+      "notFound": "Office not found",
+      "officeName": "Office Name",
+      "address": "Address",
+      "phone": "Phone",
+      "saveChanges": "Save Changes",
+      "breadcrumb": "Office - Edit"
+    }
+  },
+
+  "department": {
+    "all":{
+      "name": "Department Name",
+      "phone": "Phone",
+      "office": "Office",
+      "actions": "Actions",
+      "deleteConfirm": "Are you sure you want to delete this department?",
+      "add": "Add Department"
+    },
+    "add": {
+      "name": "Department Name",
+      "phone": "Phone",
+      "parent": "Parent",
+      "add": "Add Department",
+      "submitting": "Submit",
+      "office":"Office",
+      "submit": "Submit"
+
+    }
+  },
+   "breadcrumb": {
+      "dashboard": "Dashboard",
+      "visitors": "Visitors",
+      "addVisitor": "Add Visitor",
+      "editVisitor": "Edit Visitor",
+      "visitorReport": "Visitor Report",
+      "offices": "Offices",
+      "addOffice": "Office",
+      "departments": "Departments",
+      "addDepartment": "Add Department"
+  }
 }
