--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -102,7 +102,7 @@
     },
     "all":{
       "title": "All Offices",
-      "searchPlaceholder": "Search offices...",
+      "searchPlaceholder": "Search office...",
       "deleteConfirm": "Are you sure you want to delete this office?",
       "noOffices": "No offices available",
       "officeName": "Office Name",
@@ -111,7 +111,9 @@
       "departments": "Departments",
       "actions": "Actions",
       "edit": "Edit",
-      "delete": "Delete"
+      "delete": "Delete",
+      "search":"Search office",
+      "loading":"Loading..."
     },
     "edit":{
       "title": "Edit Office",
@@ -133,8 +135,8 @@
       "actions": "Actions",
       "deleteConfirm": "Are you sure you want to delete this department?",
       "add": "Add Department",
-      "search": "Search Departments",
-      "loading": "Loading"
+      "search": "Search Department",
+      "loading": "Loading..."
     },
     "add": {
       "name": "Department Name",
