--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -79,24 +79,30 @@
     "profile": "Profile Page"
     },
 
-  "visitorView": {
-    "noPhoto": "No photo available",
-    "viewVisitor": "View Visitor",
-    "name": "Name",
-    "phone": "Phone",
-    "fin": "FIN",
-    "email": "Email",
-    "address": "Address",
-    "description": "Description",
-    "showMore":"Show More",
-    "blocked":"Blocked",
-    "block":"Block",
-    "report":"Report",
-    "submit": "Submit",
-    "complaints": "Complaints",
-    "success": "success",
-    "error": "error"
-  },
+    "visitorView": {
+      "noPhoto": "No photo available",
+      "viewVisitor": "View Visitor",
+      "name": "Name",
+      "phone": "Phone",
+      "fin": "FIN",
+      "email": "Email",
+      "address": "Address",
+      "description": "Description",
+      "showMore": "Show More",
+      "blocked": "Blocked",
+      "block": "Block",
+      "report": "Report",
+      "submit": "Submit",
+      "complaints": "Complaints",
+      "success": "success",
+      "error": "error",
+      "loading": "Loading...",
+      "noComplaints": "No complaints available",
+      "visitor": "Visitor",
+      "reportedBy": "Reported by",
+      "createdAt": "Created at",
+      "unknown": "Unknown"
+    },
 
   "office": {
     "add": {
