forgot and reset password

--- a/public/locales/az/translation.json
+++ b/public/locales/az/translation.json
@@ -176,5 +176,33 @@
     "addOffice": "Ofis əlavə et",
     "departments": "Şöbələr",
     "addDepartment": "Şöbə əlavə et"
-  }
+  },
+  "login": {
+  "welcome": "Tətbiqimizə xoş gəlmisiniz!",
+  "loginWithEmail": "E-poçt ilə daxil olun",
+  "forgotPassword": "Şifrəni unutdunuz?",
+  "enterEmailForReset": "Şifrəni sıfırlamaq üçün e-poçt ünvanınızı daxil edin",
+  "enterResetTokenAndNewPassword": "Şifrəni sıfırlamaq üçün token və yeni şifrəni daxil edin",
+  "enterEmail": "E-poçt ünvanını daxil edin",
+  "enterPassword": "Şifrəni daxil edin",
+  "keepMeLoggedIn": "Məni daxil olmuş vəziyyətdə saxla",
+  "forgotPasswordLink": "Şifrəni unutdunuz?",
+  "sendResetLink": "Sıfırlama linkini göndər",
+  "resetPassword": "Şifrəni sıfırlamaq",
+  "newPassword": "Yeni Şifrə",
+  "confirmNewPassword": "Yeni Şifrəni Təsdiq Et",
+  "loggingIn": "Daxil olunur...",
+  "loginButton": "Daxil ol",
+  "resetPasswordButton": "Şifrəni sıfırlayın",
+  "sendResetLinkButton": "Sıfırlama linkini göndər",
+  "passwordsDoNotMatch": "Şifrələr uyğun gəlmir.",
+  "pleaseEnterEmailAndPassword": "Zəhmət olmasa, həm e-poçt, həm də şifrə daxil edin.",
+  "pleaseEnterEmailAddress": "Zəhmət olmasa, e-poçt ünvanını daxil edin.",
+  "pleaseCheckYourEmail": "Zəhmət olmasa, e-poçt ünvanınızı yoxlayın.",
+  "passwordResetSuccess": "Şifrə uğurla sıfırlandı!",
+  "invalidEmailOrPassword": "Yanlış e-poçt və ya şifrə. Zəhmət olmasa, yenidən cəhd edin.",
+  "emailAlreadyInUse": "Bu e-poçt artıq istifadə olunur.",
+  "emailNotFound": "E-poçt ünvanı tapılmadı.",
+  "checkYourEmailForResetLink": "Şifrə sıfırlama linkini əldə etmək üçün e-poçt ünvanınızı yoxlayın."
+}
 }
