--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,210 +1,231 @@
 {
-  "welcome": "Welcome to our application!",
-  "description": "Description",
-  "dashboard": "Dashboard",
-  "officesDepartments": "Offices & Departments",
-  "offices": "Offices",
-  "departments": "Departments",
-  "visitors": "Visitors",
-  "personaNonGrata": "Persona Non Grata",
-  "all": "All",
-  "add": "Add",
-  "usersPermissions": "Users & Permissions",
-  "users": "Users",
-  "permissions": "Permissions",
-  "visitorDeleteConfirm": "Are you sure you want to delete this Visitor?",
-  "errorDeletingVisitor": "Error deleting visitor",
-  "photo": "Photo",
-  "name": "Name",
-  "phone": "Phone",
-  "fin": "Fin",
-  "actions": "Actions",
-  "view": "View",
-  "loading": "Loading...",
-
-  "visitorAll": {
-    "title": "All Visitors",
-    "loading": "Loading...",
+  "general": {
+    "welcome": "Welcome to our application!",
+    "description": "Description",
+    "name": "Name",
+    "phone": "Phone",
+    "email": "Email",
     "actions": "Actions",
-    "view": "View",
-    "deleteConfirm": "Are you sure you want to delete this Visitor?",
-    "errorDeleting": "Error deleting visitor",
-    "searchPlaceholder": "Search visitor"
+    "loading": "Loading...",
+    "submit": "Submit",
+    "submitting": "Submitting...",
+    "success": "Operation completed successfully!",
+    "error": "An error occurred",
+    "reset": "Reset",
+    "add": "Add",
+    "edit": "Edit",
+    "delete": "Delete",
+    "view": "View"
   },
 
-  "visitor": {
+  "navigation": {
+    "dashboard": "Dashboard",
+    "officesDepartments": "Offices & Departments",
+    "offices": "Offices",
+    "departments": "Departments",
+    "visitors": "Visitors",
+    "personaNonGrata": "Persona Non Grata",
+    "usersPermissions": "Users & Permissions",
+    "users": "Users",
+    "permissions": "Permissions",
+    "all": "All",
+    "report": "Complaint"
+  },
+
+  "breadcrumbs": {
+    "dashboard": "Dashboard",
+    "users": "Users",
+    "addUser": "Add User",
+    "visitors": "Visitors",
+    "addVisitor": "Add Visitor",
+    "editVisitor": "Edit Visitor",
+    "visitorComplaint": "Visitor Complaint",
+    "offices": "Offices",
+    "addOffice": "Add Office",
+    "departments": "Departments",
+    "addDepartment": "Add Department"
+  },
+
+  "user": {
+    "all": {
+      "title": "Users",
+      "add": "Add User",
+      "searchPlaceholder": "Search user",
+      "name": "Name",
+      "office": "Office",
+      "department": "Department",
+      "phone": "Phone",
+      "email": "Email",
+      "role": "Role",
+      "actions": "Actions",
+      "edit": "Edit",
+      "delete": "Delete",
+      "deleteConfirm": "Are you sure you want to delete this User?",
+      "deleteSuccess": "User deleted successfully.",
+      "deleteError": "Failed to delete User."
+    },
     "add": {
-      "success": "Visitor successfully updated",
+      "title": "Add User",
+      "name": "Name",
+      "username": "Username",
+      "email": "Email",
+      "phone": "Phone",
+      "role": "Role",
+      "department": "Department",
+      "office": "Office",
+      "password": "Password",
+      "confirmPassword": "Confirm Password",
       "submitting": "Submitting...",
       "submit": "Submit",
-      "error": "Error occurred while adding visitor"
+      "success": "User successfully added!",
+      "error": "Error occurred while adding user.",
+      "roleSelect": "Select Role",
+      "departmentSelect": "Select Department",
+      "officeSelect": "Select Office"
     },
     "edit": {
-      "title": "Edit Visitor",
-      "success": "Visitor successfully updated"
+      "title": "Edit User",
+      "name": "Name",
+      "username": "Username",
+      "email": "Email",
+      "phone": "Phone",
+      "role": "Role",
+      "department": "Department",
+      "office": "Office",
+      "password": "Password",
+      "confirmPassword": "Confirm Password",
+      "active": "Active",
+      "submitting": "Submitting...",
+      "submit": "Submit",
+      "success": "User successfully updated!",
+      "error": "Error occurred while updating user."
+    },
+    "delete": {
+      "confirm": "Are you sure you want to delete this user?",
+      "success": "User successfully deleted!",
+      "error": "Error occurred while deleting user."
     }
   },
 
-  "visitorAdd": {
-    "title": "Add Visitor",
-    "success": "Visitor successfully added",
-    "submitting": "Submitting...",
-    "submit": "Submit",
-    "reset": "Reset",
-    "name": "Name",
-    "enterName": "Enter Name",
-    "phone": "Phone",
-    "enterPhone": "Enter Phone",
-    "fin": "FIN",
-    "enterFin": "Enter FIN",
-    "email": "Email",
-    "enterEmail": "Enter Email",
-    "address": "Address",
-    "enterAddress": "Enter Address",
-    "description": "Description",
-    "enterDescription": "Enter Description",
-    "addItem": "Add Item",
-    "itemName": "Item Name",
-    "itemDescription": "Item Description",
-    "addPhoto": "Add Photo"
-  },
-
-  "visitorComplaint": {
-    "loading": "Loading",
-    "noComplaintsFound": "No Complaints found",
-    "photo": "Photo",
-    "name": "Name",
-    "date": "Date",
-    "description": "Description",
-    "profile": "Profile Page"
+  "visitors": {
+    "all": {
+      "title": "All Visitors",
+      "searchPlaceholder": "Search visitor...",
+      "loading": "Loading visitors...",
+      "deleteConfirm": "Are you sure you want to delete this visitor?",
+      "errorDeleting": "Error occurred while deleting visitor."
     },
-
-    "visitorView": {
+    "view": {
+      "title": "View Visitor",
       "noPhoto": "No photo available",
-      "viewVisitor": "View Visitor",
       "name": "Name",
       "phone": "Phone",
       "fin": "FIN",
       "email": "Email",
       "address": "Address",
       "description": "Description",
-      "showMore": "Show More",
       "blocked": "Blocked",
       "block": "Block",
       "report": "Report",
-      "submit": "Submit",
       "complaints": "Complaints",
-      "success": "success",
-      "error": "error",
-      "loading": "Loading...",
       "noComplaints": "No complaints available",
-      "visitor": "Visitor",
-      "reportedBy": "Reported by",
-      "createdAt": "Created at",
-      "unknown": "Unknown"
+      "reportedBy": "Reported By",
+      "createdAt": "Created At"
     },
+    "add": {
+      "title": "Add Visitor",
+      "success": "Visitor successfully added!",
+      "submitting": "Submitting...",
+      "submit": "Submit",
+      "reset": "Reset",
+      "name": "Name",
+      "phone": "Phone",
+      "fin": "FIN",
+      "email": "Email",
+      "address": "Address",
+      "description": "Description"
+    },
+    "edit": {
+      "title": "Edit Visitor",
+      "success": "Visitor successfully updated!"
+    }
+  },
 
   "office": {
     "add": {
-      "add": "New Office",
-      "success": "Office successfully added",
-      "officeExists": "Office already exists",
-      "officeName": "Office Name",
+      "title": "Add Office",
+      "name": "Office Name",
       "address": "Address",
       "phone": "Phone",
       "submitting": "Submitting...",
-      "submit": "Submit"
+      "submit": "Submit",
+      "success": "Office successfully added!",
+      "error": "Error occurred while adding office."
     },
     "all": {
       "title": "All Offices",
       "searchPlaceholder": "Search office...",
       "deleteConfirm": "Are you sure you want to delete this office?",
       "noOffices": "No offices available",
-      "officeName": "Office Name",
+      "name": "Office Name",
       "address": "Address",
       "phoneNumber": "Phone Number",
       "departments": "Departments",
       "actions": "Actions",
-      "edit": "Edit",
-      "delete": "Delete",
-      "search": "Search office",
       "loading": "Loading..."
     },
     "edit": {
       "title": "Edit Office",
-      "success": "Office successfully edited",
-      "notFound": "Office not found",
-      "officeName": "Office Name",
-      "address": "Address",
-      "phone": "Phone",
-      "saveChanges": "Save Changes",
-      "breadcrumb": "Office - Edit"
+      "success": "Office successfully edited!",
+      "error": "Error occurred while editing office."
     }
   },
 
-  "department": {
-    "all": {
-      "name": "Department Name",
-      "phone": "Phone",
-      "office": "Office",
-      "actions": "Actions",
-      "deleteConfirm": "Are you sure you want to delete this department?",
-      "add": "Add Department",
-      "search": "Search Department",
-      "loading": "Loading...",
-      "searchPlaceholder": "Search department..."
-    },
+  "departments": {
     "add": {
+      "title": "Add Department",
       "name": "Department Name",
-      "phone": "Phone",
-      "parent": "Parent",
-      "add": "Add Department",
-      "submitting": "Submit",
-      "office": "Office",
       "address": "Address",
-      "error": "Error occurred while adding visitor",
-      "submit": "Submit"
+      "phone": "Phone",
+      "submitting": "Submitting...",
+      "submit": "Submit",
+      "success": "Department successfully added!",
+      "error": "Error occurred while adding department."
+    },
+    "all": {
+      "title": "All Departments",
+      "searchPlaceholder": "Search department...",
+      "deleteConfirm": "Are you sure you want to delete this department?",
+      "noDepartments": "No departments available",
+      "name": "Department Name",
+      "address": "Address",
+      "phone": "Phone",
+      "actions": "Actions"
     }
   },
-   "breadcrumb": {
-    "dashboard": "Dashboard",
-    "visitors": "Visitors",
-    "addVisitor": "Add Visitor",
-    "editVisitor": "Edit Visitor",
-    "visitorComplaint": "Visitor Complaint",
-    "offices": "Offices",
-    "addOffice": "Office",
-    "departments": "Departments",
-    "addDepartment": "Add Department"
-  },
+
   "login": {
     "welcome": "Welcome to our application!",
-    "loginWithEmail": "Login with Email",
-    "forgotPassword": "Forgot Password",
-    "enterEmailForReset": "Enter your email to receive a reset link",
-    "enterResetTokenAndNewPassword": "Enter reset token and new password",
-    "enterEmail": "Enter Email",
-    "enterPassword": "Enter Password",
-    "keepMeLoggedIn": "Keep me logged in",
-    "forgotPasswordLink": "Forgot Password?",
-    "sendResetLink": "Send Reset Link",
-    "resetPassword": "Reset Password",
-    "newPassword": "New Password",
-    "confirmNewPassword": "Confirm New Password",
+    "email": "Enter your email",
+    "password": "Enter your password",
+    "forgotPassword": "Forgot Password?",
+    "submit": "Login",
     "loggingIn": "Logging in...",
-    "loginButton": "Login",
-    "resetPasswordButton": "Reset Password",
-    "sendResetLinkButton": "Send Reset Link",
-    "passwordsDoNotMatch": "Passwords do not match.",
-    "pleaseEnterEmailAndPassword": "Please enter both email and password.",
-    "pleaseEnterEmailAddress": "Please enter an email address.",
-    "pleaseCheckYourEmail": "Please check your email for the reset link.",
-    "passwordResetSuccess": "Password reset successfully!",
-    "invalidEmailOrPassword": "Invalid email or password. Please try again.",
-    "emailAlreadyInUse": "This email is already in use.",
-    "emailNotFound": "Email address not found.",
-    "checkYourEmailForResetLink": "Please check your email for the reset link."
+    "resetPassword": {
+      "title": "Reset Password",
+      "emailPlaceholder": "Enter your email to receive a reset link",
+      "newPassword": "New Password",
+      "confirmPassword": "Confirm New Password",
+      "resetButton": "Reset Password",
+      "success": "Password reset successfully!"
+    }
+  },
+
+  "errors": {
+    "general": "An error occurred",
+    "loading": "Error occurred while loading data",
+    "notFound": "Resource not found",
+    "invalidInput": "Invalid input provided",
+    "invalidCredentials": "Invalid email or password"
   }
-
-
 }
