--- a/public/locales/az/translation.json
+++ b/public/locales/az/translation.json
@@ -308,28 +308,34 @@
     "email": "E-poçt ünvanını daxil edin",
     "password": "Şifrəni daxil edin",
     "keepMeLoggedIn": "Məni daxil olmuş vəziyyətdə saxla",
-    "forgotPassword": "Şifrəni unutdunuz?",
-    "loginButton": "Daxil ol",
-    "loggingIn": "Daxil olunur...",
-
-    "enterEmailForReset": "Şifrəni sıfırlamaq üçün e-poçt ünvanınızı daxil edin",
-    "enterResetTokenAndNewPassword": "Şifrəni sıfırlamaq üçün token və yeni şifrəni daxil edin",
     "forgotPasswordLink": "Şifrəni unutdunuz?",
-    "sendResetLink": "Sıfırlama linkini göndər",
-    "resetPassword": "Şifrəni sıfırlamaq",
-    "newPassword": "Yeni Şifrə",
-    "confirmNewPassword": "Yeni Şifrəni Təsdiq Et",
-    "resetPasswordButton": "Şifrəni sıfırlayın",
-    "sendResetLinkButton": "Sıfırlama linkini göndər",
-    "passwordsDoNotMatch": "Şifrələr uyğun gəlmir.",
-    "pleaseEnterEmailAndPassword": "Zəhmət olmasa, həm e-poçt, həm də şifrə daxil edin.",
-    "pleaseEnterEmailAddress": "Zəhmət olmasa, e-poçt ünvanını daxil edin.",
-    "pleaseCheckYourEmail": "Zəhmət olmasa, e-poçt ünvanınızı yoxlayın.",
-    "passwordResetSuccess": "Şifrə uğurla sıfırlandı!",
-    "invalidEmailOrPassword": "Yanlış e-poçt və ya şifrə. Zəhmət olmasa, yenidən cəhd edin.",
-    "emailAlreadyInUse": "Bu e-poçt artıq istifadə olunur.",
-    "emailNotFound": "E-poçt ünvanı tapılmadı.",
-    "checkYourEmailForResetLink": "Şifrə sıfırlama linkini əldə etmək üçün e-poçt ünvanınızı yoxlayın.",
+    "loginButton": "Daxil ol",
+    "loggingIn": "Daxil olunur...",    
+    "forgot": {
+      "forgotPassword": "Şifrəni unutdunuz?",
+      "enterEmailForReset": "Şifrəni sıfırlamaq üçün e-poçt ünvanınızı daxil edin",
+      "sendResetLinkButton": "Sıfırlama linkini göndər",
+      "email": "E-poçt ünvanını daxil edin"
+    },
+    "reset": {
+      "title": "Şifrəni sıfırlayın",
+      "enterResetTokenAndNewPassword": "Şifrəni sıfırlamaq üçün token və yeni şifrəni daxil edin",
+      "email": "E-poçt ünvanını daxil edin",
+      "newPassword": "Yeni Şifrə",
+      "confirmNewPassword": "Yeni Şifrəni Təsdiq Et",
+      "resetPasswordButton": "Şifrəni sıfırlayın"
+    },
+    "toast": {
+      "passwordsDoNotMatch": "Şifrələr uyğun gəlmir.",
+      "pleaseEnterEmailAndPassword": "Zəhmət olmasa, həm e-poçt, həm də şifrə daxil edin.",
+      "pleaseEnterEmailAddress": "Zəhmət olmasa, e-poçt ünvanını daxil edin.",
+      "pleaseCheckYourEmail": "Zəhmət olmasa, e-poçt ünvanınızı yoxlayın.",
+      "passwordResetSuccess": "Şifrə uğurla sıfırlandı!",
+      "invalidEmailOrPassword": "Yanlış e-poçt və ya şifrə. Zəhmət olmasa, yenidən cəhd edin.",
+      "emailAlreadyInUse": "Bu e-poçt artıq istifadə olunur.",
+      "emailNotFound": "E-poçt ünvanı tapılmadı.",
+      "checkYourEmailForResetLink": "Şifrə sıfırlama linkini əldə etmək üçün e-poçt ünvanınızı yoxlayın."
+    },
     "backToLogin": "Geri"
   },
   "error": {
